src/tests/test-src/errors/E76-alias-keyword.syntran
// E76: alias-keyword
// A `use ... as <alias>` alias is a reserved language keyword

use foo as let;
